# Gatherraa

./: .gitignore  01-peer-authentication.yaml  02-ingress-gateway.yaml  03-circuit-breaking.yaml  04-canary-rollout.yaml  05-authorization-policy.yaml  CI_CD_PIPELINE.md  PAYMENT_FILE_REFERENCE.md  PR_DESCRIPTION.md  PR_DESCRIPTION_158.md  PR_DESCRIPTION_160.md  README.md  analysis.yaml  application.yaml  chaos-test.js  ci-cd.yaml  docker-compose.override.yml.example  docker-compose.yaml  docker-compose.yml  install-addons.sh  install.sh  kustomization.yaml  notification-flow.js  package.json  payment-flow.js  rollout.yaml  run-test.sh  service.yaml
.github/workflows/: ci.yml  integration-tests.yml
app/backend/: .dockerignore  .gitignore  Dockerfile  database.sqlite  docker-compose.elasticsearch.yml  eslint.config.mjs  package-lock.json  package.json
app/backend/src/: app.module.ts  main.ts
app/backend/src/analytics/: analytics.module.ts
app/backend/src/anonymizer/: runner.ts
app/backend/src/api/: axios.ts
app/backend/src/booking/: booking.module.ts
app/backend/src/data-aggregation/: data-aggregation.service.spec.ts
app/backend/src/documents/: documents.module.ts
app/backend/src/events/: events.controller.ts  events.module.ts  events.service.ts
app/backend/src/gamification/: gamification.controller.ts  gamification.module.ts
app/backend/src/migrations/: runner.ts  (+6 more)
app/backend/test/: events-cqrs.e2e-spec.ts  events-cqrs.unit-spec.ts
app/frontend/: .depcheckrc  eslint.config.mjs  lighthouserc.js  middleware.ts  next.config.mjs  package-lock.json  package.json  performance-budget.json  tsconfig.json
app/frontend/app/: error.tsx  globals.css  layout.tsx  loading.tsx  page.tsx
app/frontend/components/: Animatedcard.tsx  DataTable.tsx  Missionquerybuilder.tsx  MultiSourceDataAggregator.tsx  NetworkGuard.tsx  NotificationPanel.tsx  SessionTimeoutManager.tsx  StateVisualizer.tsx
app/frontend/config/: route-guard.config.ts
app/frontend/hooks/: useAuth.ts  useDebouncedSearch.ts  useForm.ts  useKeyboardNavigation.ts  usePagination.ts  useSavedFilters.ts  useSearchParams.ts
app/frontend/scripts/: check-bundle-size.mjs  find-unused-deps.mjs  treeshake-audit.mjs
app/frontend/styles/: tokens.css
app/frontend/types/: attendee.ts  ticket-plans.ts  wallet.ts
app/image-service/: .env.example  Dockerfile  README.md  docker-compose.yml  index.js  package.json
contract/: Cargo.toml  LICENSE  package.json
contract/common/src/: errors.rs  lib.rs
contract/config/: chains.json
contract/contracts/: Cargo.toml
contract/contracts/src/: address_validation_tests.rs  chain_abstraction.rs  cross_chain.rs  storage.rs
contract/cross_contract_contract/: Cargo.toml
contract/cross_contract_contract/src/: lib.rs
contract/dutch_auction_contract/: Cargo.toml
contract/dutch_auction_contract/src/: lib.rs  storage_types.rs  test.rs
contract/escrow_contract/: Cargo.toml
contract/escrow_contract/src/: lib.rs  security_tests.rs  storage_types.rs
contract/event_factory_contract/src/: lib.rs
contract/governance_contract/src/: lib.rs  storage.rs
contract/identity_contract/src/: lib.rs
contract/multisig_wallet_contract/: Cargo.toml
contract/multisig_wallet_contract/src/: lib.rs  storage_types.rs
contract/subscription_contract/: Cargo.toml  DEPLOYMENT.md  IMPLEMENTATION_STATUS.md  README.md
contract/subscription_contract/src/: events.rs  lib.rs  storage_types.rs  subscription.rs  test.rs  utils.rs
contract/ticket_contract/: .gitignore  Cargo.toml
contract/ticket_contract/src/: allocation.rs  entropy.rs  lib.rs  storage_types.rs  test.rs  vrf.rs
contract/whitelist_contract/src/: lib.rs
contract/zk_ticket_contract/: Cargo.toml
contract/zk_ticket_contract/src/: lib.rs  storage_types.rs
docs/: BACKUP_DISASTER_RECOVERY.md  INTEGRATION_FRAMEWORK.md
monitoring/: prometheus.yml
ops/backup-dr/: .env.example  backup.sh  enable-pitr-rds.sh  recovery-test.sh  restore.sh
ops/backup-dr/velero/: backup-schedule.yaml  recovery-smoke-test.yaml
scripts/: validate-config.sh
tests/integration/: package-lock.json  package.json
tests/integration/scripts/: build-contracts.js
(+327 files in other folders)
