[package]
name = "gathera-contracts"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = { workspace = true }
gathera-common = { workspace = true }
ticket_contract = { workspace = true }
escrow_contract = { workspace = true }
multisig_wallet_contract = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
