[package]
name = "cross_contract_contract"
version = "0.1.0"
edition = "2021"
description = "Cross-contract invocation system for Gathera contracts"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = "23.5.2"

[dev-dependencies]
soroban-sdk = { version = "23.5.2", features = ["testutils"] }

[features]
testutils = ["soroban-sdk/testutils"]

[profile.release]
opt-level = "z"
debug = 0
strip = "symbols"
debug-assertions = false
overflow-checks = true
lto = true
panic = "abort"
codegen-units = 1
