[package]
name = "escrow_contract"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Secure escrow contract for event payments with revenue splitting"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
stellar-access = "0.7.2"
stellar-tokens = "0.7.2"

[features]
testutils = ["soroban-sdk/testutils"]
