[package]
name = "ticket_contract"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = "23.5.2"
stellar-access = "0.6.0"
stellar-macros = "0.6.0"
stellar-tokens = "0.6.0"

[dev-dependencies]
soroban-sdk = { version = "23.5.2", features = ["testutils"] }
